--- a/bundesliga/package.json
+++ b/bundesliga/package.json
@@ -13,6 +13,7 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^5.2.0",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -32,6 +33,7 @@
     "@types/jest": "^29.5.4",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
+    "prisma": "^5.2.0",
     "ts-node": "^10.9.1"
   }
 }
