--- a/bundesliga/package.json
+++ b/bundesliga/package.json
@@ -27,12 +27,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
+    "@types/uuid": "^9.0.3",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "prisma": "^5.2.0",
