--- a/bundesliga/package.json
+++ b/bundesliga/package.json
@@ -31,6 +31,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^10.4.0",
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
@@ -38,6 +39,7 @@
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "prisma": "^5.2.0",
+    "prisma-erd-generator": "^1.11.1",
     "ts-node": "^10.9.1"
   }
 }
